# auth-sessions-example

./: .env.example  .gitignore  Cargo.toml  README.md  rustfmt.toml
.cargo/: config.toml
end2end/tests/: landing_page.spec.ts
migrations/: 20230217131900_create_users_table.sql  20230220100500_create_users_table.sql  20230723230000_create_users_table.sql
src/: app.rs  cookies.rs  database.rs  defs.rs  fileserv.rs  lib.rs  main.rs  pages.rs  security.rs  tools.rs  websocket.rs
src/app/: components.rs  error_template.rs  homepage.rs
src/app/components/: csrf.rs  logheader.rs  logoutbutton.rs
src/pages/: components.rs  error_template.rs  homepage.rs  landingpage.rs  loginpage.rs  logoutpage.rs  signuppage.rs
src/pages/components/: csrf.rs  logheader.rs  logout.rs  logoutbutton.rs  redirect.rs
style/: main.scss
