[package]
name = "auth-example"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
axum = { version = "0.6", optional = true, features = ["headers"] }
axum-extra = { version = "0.4", optional = true, features = ["cookie"] }
axum-server = { version = "0.4", features = ["tls-rustls"], optional = true }
cfg-if = "1"
chrono = { version = "0.4", optional = true, default-features = false, features = ["clock", "std"] }
console_error_panic_hook = "0.1"
console_log = "0.2"
http = "0.2"
#jsonwebtoken = { version = "8.0", optional = true }
leptos = { git = "https://github.com/leptos-rs/leptos", default-features = false, features = ["serde"] }
leptos_axum = { git = "https://github.com/leptos-rs/leptos", default-features = false, optional = true }
leptos_meta = { git = "https://github.com/leptos-rs/leptos", optional = true }
leptos_reactive = { git = "https://github.com/leptos-rs/leptos" }
leptos_router = { git = "https://github.com/leptos-rs/leptos", default-features = false }
log = "0.4"
#oauth2 = { version = "4.3.0", default-features = false, features = ["rustls-tls"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simple_logger = "4"
thiserror = "1.0"
tokio = { version = "1.25", features = ["full"], optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.3", features = ["fs"], optional = true }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", optional = true, features = ["AbortController", "AbortSignal", "HtmlDocument",] }


[features]
#default = ["csr"]
#csr = ["leptos/csr", "leptos_meta/csr", "leptos_router/csr"]
hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate", "dep:web-sys"]
ssr = [
    "dep:axum",
    "dep:axum-extra",
    "dep:axum-server",
    "dep:tokio",
    "dep:tower",
    "dep:tower-http",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "dep:leptos_axum",
    "dep:chrono",
#   "dep:jsonwebtoken",
#   "dep:oauth2",
]

[package.metadata.cargo-all-features]
denylist = [
    "axum",
    "tower",
    "tower-http",
    "tokio",
    "sqlx",
    "leptos_axum",
]
skip_feature_sets = [["csr", "ssr"], ["csr", "hydrate"], ["ssr", "hydrate"]]

[package.metadata.leptos]
# The name used by wasm-bindgen/cargo-leptos for the JS/WASM bundle. Defaults to the crate name
output-name = "auth_example"

# The site root folder is where cargo-leptos generate all output. WARNING: all content of this folder will be erased on a rebuild. Use it in your server setup.
site-root = "target/site"

# The site-root relative folder where all compiled output (JS, WASM and CSS) is written
# Defaults to pkg
site-pkg-dir = "pkg"

# [Optional] The source CSS file. If it ends with .sass or .scss then it will be compiled by dart-sass into CSS. The CSS is optimized by Lightning CSS before being written to <site-root>/<site-pkg>/app.css
style-file = "style/main.scss"

# [Optional] Files in the asset-dir will be copied to the site-root directory
assets-dir = "public"

# The IP and port (ex: 127.0.0.1:3000) where the server serves HTTPS content. Use it in your server setup.
site-addr = "127.0.0.1:3000"

# The port to use for automatic reload monitoring
reload-port = 3001

# [Optional] Command to use when running end2end tests. It will run in the end2end dir.
# On Linux this command must be modified to "npx playwright test"
end2end-cmd = "npx.cmd playwright test"
end2end-dir = "end2end"

#  The browserlist query used for optimizing the CSS.
browserquery = "defaults"

# Set by cargo-leptos watch when building with that tool. Controls whether autoreload JS will be included in the head
watch = false

# The environment Leptos will run in, usually either "DEV" or "PROD"
env = "DEV"

# The features to use when compiling the bin target
#
# Optional. Can be over-ridden with the command line parameter --bin-features
bin-features = ["ssr"]

# If the --no-default-features flag should be used when compiling the bin target
#
# Optional. Defaults to false.
bin-default-features = false

# The features to use when compiling the lib target
#
# Optional. Can be over-ridden with the command line parameter --lib-features
lib-features = ["hydrate"]

# If the --no-default-features flag should be used when compiling the lib target
#
# Optional. Defaults to false.
lib-default-features = false
